# video-wallpaper-caelestia-hyprland

./: Cargo.toml  LICENSE  PKGBUILD  PRD.md  README.md
data/: sh.martinez.VideoWallpaper.desktop  video-wallpaper-restore.service
src/: app.rs  config.rs  main.rs  theming.rs  util.rs  window.rs
src/gallery/: mod.rs  monitor_selector.rs  video_tile.rs
src/services/: caelestia.rs  gpu.rs  mod.rs  monitors.rs  mpvpaper.rs  process.rs  thumbnails.rs  video_scanner.rs
src/settings/: mod.rs  mpvpaper_prefs.rs
style/: base.css
