[package]
name = "video-wallpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
gio = { version = "0.22", features = ["v2_76"] }
glib = { version = "0.22" }
gdk = { package = "gdk4", version = "0.11" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

dirs = "6"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
